# chat-app-android

./: build.gradle  settings.gradle
app/: build.gradle  google-services.json
app/src/androidTest/java/com/karry/chatapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/karry/chatapp/: ChatApplication.kt
app/src/main/res/drawable/: button_backround.xml  button_outline_backround.xml  checkbox.xml  checked.xml  ic_attach.xml  ic_check.xml  ic_emoji.xml  ic_hide_password.xml  ic_image.xml  ic_phone.xml  ic_send.xml  ic_show_password.xml  receiver_message_background.xml  sender_message_background.xml  unchecked.xml
app/src/main/res/layout/: activity_main.xml  content_main.xml  fragment_chat.xml  fragment_home.xml  fragment_login.xml  fragment_sign_up.xml  fragment_splash.xml  fragment_user_list.xml  item_chat_receiver.xml  item_chat_sender.xml  item_conversation.xml  item_user.xml
app/src/main/res/menu/: chat_menu.xml  menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/raw/: chat_logo.json
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/karry/chatapp/: ExampleUnitTest.kt
chaotic/: build.gradle
chaotic/src/androidTest/java/com/karry/chaotic/: ExampleInstrumentedTest.kt
chaotic/src/main/cpp/: CMakeLists.txt  chaotic.cpp
chaotic/src/main/cpp/include/: ChaoticCypher.h  ChaoticMap.h  Hash.h  LFSR.h  Utils.h
chaotic/src/main/cpp/src/: ChaoticCypher.cpp  ChaoticMap.cpp  Hash.cpp  LFSR.cpp  Utils.cpp
gradle/wrapper/: gradle-wrapper.properties
(+103 files in other folders)
